--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,4 +1,5 @@
 nelmio_api_doc_index:
     path: /{view}
-    defaults: { _controller: NelmioApiDocBundle:ApiDoc:index, view: 'default' }
+    controller: 'Nelmio\ApiDocBundle\Controller\ApiDocController::indexAction'
+    defaults: { view: 'default' }
     methods: [GET]
