--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     ],
     "require": {
         "php": "~8.1.0",
-        "symfony/twig-bundle": "~2.3|~3.0|~4.0",
-        "symfony/framework-bundle": "~2.3|~3.0|~4.0",
-        "symfony/console": "~2.3|~3.0|~4.0",
+        "symfony/twig-bundle": "^4.4 || ^5.4",
+        "symfony/framework-bundle": "^4.4 || ^5.4",
+        "symfony/console": "^4.4 || ^5.4",
         "michelf/php-markdown": "~1.4"
     },
     "conflict": {
@@ -28,19 +28,19 @@
         "symfony/symfony": "~2.7.8"
     },
     "require-dev": {
-        "symfony/css-selector": "~2.3|~3.0|~4.0",
-        "symfony/browser-kit": "~2.3|~3.0|~4.0",
-        "symfony/validator": "~2.3|~3.0|~4.0",
-        "symfony/yaml": "~2.3|~3.0|~4.0",
-        "symfony/form": "~2.3|~3.0|~4.0",
-        "symfony/finder": "~2.3|~3.0|~4.0",
-        "symfony/serializer": "~2.7|~3.0|~4.0",
+        "symfony/css-selector": "^4.4 || ^5.4",
+        "symfony/browser-kit": "^4.4 || ^5.4",
+        "symfony/validator": "^4.4 || ^5.4",
+        "symfony/yaml": "^4.4 || ^5.4",
+        "symfony/form": "^4.4 || ^5.4",
+        "symfony/finder": "^4.4 || ^5.4",
+        "symfony/serializer": "^4.4 || ^5.4",
         "doctrine/orm": "~2.3",
         "doctrine/doctrine-bundle": "~1.5",
         "friendsofsymfony/rest-bundle": "~1.0|~2.0",
         "jms/serializer-bundle": ">=0.11",
         "sensio/framework-extra-bundle": "~3.0",
-        "symfony/phpunit-bridge": "~2.7|~3.0|~4.0"
+        "symfony/phpunit-bridge": "^4.4 || ^5.4"
     },
     "suggest": {
         "symfony/form": "For using form definitions as input.",
