--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     ],
     "require": {
         "php": "~8.1.0",
-        "symfony/twig-bundle": "^4.4 || ^5.4",
-        "symfony/framework-bundle": "^4.4 || ^5.4",
-        "symfony/console": "^4.4 || ^5.4",
+        "symfony/twig-bundle": "^5.4",
+        "symfony/framework-bundle": "^5.4",
+        "symfony/console": "^5.4",
         "michelf/php-markdown": "~1.4"
     },
     "conflict": {
@@ -28,19 +28,17 @@
         "symfony/symfony": "~2.7.8"
     },
     "require-dev": {
-        "symfony/css-selector": "^4.4 || ^5.4",
-        "symfony/browser-kit": "^4.4 || ^5.4",
-        "symfony/validator": "^4.4 || ^5.4",
-        "symfony/yaml": "^4.4 || ^5.4",
-        "symfony/form": "^4.4 || ^5.4",
-        "symfony/finder": "^4.4 || ^5.4",
-        "symfony/serializer": "^4.4 || ^5.4",
-        "doctrine/orm": "~2.3",
-        "doctrine/doctrine-bundle": "~1.5",
-        "friendsofsymfony/rest-bundle": "~1.0|~2.0",
+        "symfony/css-selector": "^5.4",
+        "symfony/browser-kit": "^5.4",
+        "symfony/validator": "^5.4",
+        "symfony/yaml": "^5.4",
+        "symfony/form": "^5.4",
+        "symfony/finder": "^5.4",
+        "symfony/serializer": "^5.4",
+        "friendsofsymfony/rest-bundle": "^3.8",
         "jms/serializer-bundle": ">=0.11",
-        "sensio/framework-extra-bundle": "~3.0",
-        "symfony/phpunit-bridge": "^4.4 || ^5.4"
+        "sensio/framework-extra-bundle": "^6.2",
+        "symfony/phpunit-bridge": "^5.4"
     },
     "suggest": {
         "symfony/form": "For using form definitions as input.",
