--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,11 @@
     ],
     "require": {
         "php": "~8.1.0",
-        "symfony/twig-bundle": "^5.4",
-        "symfony/framework-bundle": "^5.4",
-        "symfony/console": "^5.4",
-        "michelf/php-markdown": "~1.4"
+        "symfony/twig-bundle": "^5.4 || ^6.4",
+        "symfony/framework-bundle": "^5.4 || ^6.4",
+        "symfony/console": "^5.4 || ^6.4",
+        "michelf/php-markdown": "~1.4",
+        "doctrine/common": "^3.5"
     },
     "conflict": {
         "jms/serializer": "<0.12",
@@ -28,17 +29,17 @@
         "symfony/symfony": "~2.7.8"
     },
     "require-dev": {
-        "symfony/css-selector": "^5.4",
-        "symfony/browser-kit": "^5.4",
-        "symfony/validator": "^5.4",
-        "symfony/yaml": "^5.4",
-        "symfony/form": "^5.4",
-        "symfony/finder": "^5.4",
-        "symfony/serializer": "^5.4",
+        "symfony/css-selector": "^5.4 || ^6.4",
+        "symfony/browser-kit": "^5.4 || ^6.4",
+        "symfony/validator": "^5.4 || ^6.4",
+        "symfony/yaml": "^5.4 || ^6.4",
+        "symfony/form": "^5.4 || ^6.4",
+        "symfony/finder": "^5.4 || ^6.4",
+        "symfony/serializer": "^5.4 || ^6.4",
         "friendsofsymfony/rest-bundle": "^3.8",
         "jms/serializer-bundle": ">=0.11",
         "sensio/framework-extra-bundle": "^6.2",
-        "symfony/phpunit-bridge": "^5.4"
+        "symfony/phpunit-bridge": "^5.4 || ^6.4"
     },
     "suggest": {
         "symfony/form": "For using form definitions as input.",
